feat: financial sheet statements

--- a/backend/config/default.yaml
+++ b/backend/config/default.yaml
@@ -25,3 +25,6 @@ database:
 opentelemetry:
   deployment_environment: "dev"
   otlp_endpoint: "http://x.x.x.x:4317"
+
+financial_modeling_prep:
+  apikey: "XXX" # 请替换为你的实际 FMP API Key
