--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,5 +1,5 @@
 # Stage 1: Build the frontend application
-FROM node:18-alpine AS builder
+FROM m.daocloud.io/docker.io/node:22-alpine AS builder
 
 # Set the working directory
 WORKDIR /app
@@ -7,6 +7,7 @@ WORKDIR /app
 # Copy package.json and package-lock.json (or yarn.lock)
 COPY package*.json ./
 
+RUN npm config set registry https://registry.npmmirror.com
 # Install dependencies
 RUN npm install
 
@@ -16,17 +17,33 @@ COPY . .
 # Build the application for production
 RUN npm run build
 
-# Stage 2: Serve the application using Nginx
-FROM nginx:1.25-alpine
+# Stage 2: Production image
+FROM m.daocloud.io/docker.io/node:22-alpine AS runner
 
-# Copy the built static files from the builder stage to the Nginx public directory
-COPY --from=builder /app/build /usr/share/nginx/html
+WORKDIR /app
 
-# Copy a custom Nginx configuration file
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+# Set environment variables
+ENV NODE_ENV=production
 
-# Expose port 80 for the Nginx server
-EXPOSE 80
+# Create a non-root user for security
+RUN addgroup -g 1001 -S nodejs
+RUN adduser -S nextjs -u 1001
 
-# Command to start Nginx in the foreground
-CMD ["nginx", "-g", "daemon off;"]
+# Copy the standalone folder from the builder stage
+COPY --from=builder /app/.next/standalone ./
+
+# Copy the public and static folders
+COPY --from=builder /app/public ./public
+COPY --from=builder /app/.next/static ./.next/static
+
+# Change ownership of the files to the non-root user
+RUN chown -R nextjs:nodejs /app
+
+# Switch to the non-root user
+USER nextjs
+
+# Expose the port the app will run on
+EXPOSE 3000
+
+# Command to start the server
+CMD ["node", "server.js"]
