--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,12 +14,15 @@
     "@rc-component/util": "^1.4.0",
     "antd": "^6.0.0-alpha.4",
     "antd-style": "^3.7.1",
+    "echarts": "^6.0.0",
+    "lodash": "^4.17.21",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/lodash": "^4.17.21",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
