--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ant-design/graphs": "^2.1.1",
     "@ant-design/icons": "^6.1.0",
     "@rc-component/input": "^1.1.2",
     "@rc-component/util": "^1.4.0",
